[jinxin] feat: #36 save description to database and update version info when save button clicked

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "scripts": {
     "build": "parcel build src/html/*.html"
   },
+  "dependencies": {
+    "axios": "^0.24.0",
+    "http-proxy-middleware": "^2.0.1"
+  },
   "devDependencies": {
     "parcel-bundler": "^1.12.5"
   }
