--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "http-proxy-middleware": "^2.0.1"
+    "echarts": "^5.2.2",
+    "http-proxy-middleware": "^2.0.1",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
-    "diff": "^5.0.0",
     "colors": "^1.4.0",
-    "parcel-bundler": "^1.12.5",
-    "lodash": "^4.17.21"
+    "diff": "^5.0.0",
+    "lodash": "^4.17.21",
+    "parcel-bundler": "^1.12.5"
   }
 }
